--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -1,5 +1,164 @@
 ---
-sanity_slug: /docs/authentication/email-sms-templates
+title: Email and SMS templates
+description: Learn how to configure the theming of Clerk-sent emails and SMS messages.
 ---
 
-# This is a stub
+# Email and SMS templates
+
+Clerk provides a templating system that allows you to customize the default system email and SMS messages sent during authentication flows.
+
+The template editor enables you to change the wording and styling so that it is more consistent with your own branding.
+
+It is also a useful way to translate the content to another target language in the case that English is not the default locale of your application.
+
+## Terminology
+
+It will be useful to take a look at the following terms as they will reappear in the rest of the guide:
+
+| Name | Description |
+| --- | --- |
+| template name | User-friendly name of the template. This will be visible on the template listing page. |
+| variables | Also known as merge tags in the context of email marketing, these are placeholders that are replaced with dynamic data when the actual email or SMS is being sent to the recipient. |
+| WYSIWYG | Stands for 'What You See Is What You Get.' This term is used for editors and design tools that allow you create content or layout in a visual manner (i.e. without requiring you to edit the underlying markup) so that you can instantly see how the result is going to display to your users. |
+| blocks | Email WYSIWYG editors enable you to use blocks, rows, and columns in order to control the layout of their content (this is then transpiled to table-based HTML). |
+
+## Available templates
+
+Clerk allows you to modify the templates listed below.
+
+### Email
+
+To access the email templates, navigate to the [Email](https://dashboard.clerk.com/last-active?path=customization/email) tab under the **Customization** section in the Clerk Dashboard.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/email-templates.jpg"
+alt="The 'Emails' tab under the 'Customization' section of the Clerk Dashboard."
+/>
+
+The following templates are available for customization:
+
+| Template Name | Description |
+| --- | --- |
+| [Invitation](https://dashboard.clerk.com/last-active?path=customization/email/invitation/edit) | Email sent to invite a user to join your application |
+| [Magic link - Sign in](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_sign_in/edit) | Email containing magic link to allow the user to sign in without providing a password |
+| [Magic link - Sign up](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_sign_up/edit) | Email containing magic link that invites the user to sign up |
+| [Magic link - Verify email](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_user_profile/edit) | Email containing magic link to verify the ownership of an email address |
+| [Password changed](https://dashboard.clerk.com/last-active?path=customization/email/password_changed/edit) | Email notifying the user that their password has been changed |
+| [Password removed](https://dashboard.clerk.com/last-active?path=customization/email/password_removed/edit) | Email notifying the user that their password has been removed |
+| [Primary email address changed](https://dashboard.clerk.com/last-active?path=customization/email/primary_email_address_changed/edit) | Email notifying the user that their primary email address has been updated |
+| [Reset password code](https://dashboard.clerk.com/last-active?path=customization/email/reset_password_code/edit) | Email containing an OTP (One Time Password) code that allows the user to reset their password |
+| [Verification code](https://dashboard.clerk.com/last-active?path=customization/email/verification_code/edit) | Email containing an OTP (One Time Password) code for verifying account access |
+
+### SMS
+
+To access the SMS templates, navigate to the [SMS](https://dashboard.clerk.com/last-active?path=customization/sms) tab under the **Customization** section in the Clerk Dashboard.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/sms-templates.jpg"
+alt="The 'SMS' tab under the 'Customization' section of the Clerk Dashboard."
+/>
+
+The following templates are available for customization:
+
+| Template Name | Description |
+| --- | --- |
+| Invitation | SMS sent to invite a user to join your application |
+| Password changed | SMS notifying the user that their password has been changed |
+| Password removed | SMS notifying the user that their password has been removed |
+| Reset password | SMS containing an OTP (One Time Password) code that allows the user to reset their password |
+| Verification code | SMS containing an OTP (One Time Password) code for verifying account access |
+
+## Before you start 
+
+### Revolvapp WYSIWYG email editor plugin
+
+The email editor uses the [Revolvapp](https://imperavi.com/revolvapp) email template editor plugin by Imperavi. To acquaint yourself with the template markup syntax, please consult the corresponding [documentation page](https://imperavi.com/revolvapp/docs/syntax/quick-start).
+
+As you will see, the template markup is an HTML-like language and each type of node supports its own set of attributes which control its behavior. A lot of the attributes are borrowed from HTML itself.
+
+Revolvapp allows the user to design the template using blocks and under the hood transpiles its markup to table-based HTML so that the resulting email renders consistently across email clients.
+
+### Handlebars templating language
+
+Both the email and SMS editor use the [Handlebars](https://handlebarsjs.com/) templating language for the interpolation of dynamic values into your content via variables. It is a well established language, especially popular in the Javascript ecosystem, which has been adopted by leading Email Service Providers (ESPs) for templating as well.
+
+The most core Handlebars concept you should bear in mind is that in order to output a variable, you should wrap its name within double curly braces. For example: `{{app.name}}`. When the message is to be sent, this will be replaced with the actual name of the application.
+
+Using the variable insertion widgets, the variables will be inserted into the content at the desired position, so is there no need to write them by hand. Though, you can still do so if you like.
+
+For further information on Handlebars, we recommend you take a look at the [official guides](https://handlebarsjs.com/guide/).
+
+There will definitely be a learning curve before you master both Revolvapp syntax and Handblebars, but we have no doubt that you will be crafting beautiful templates in no time!
+
+## Template operations
+
+Please consult the following sub-sections to see which operations are available in the template editor.
+
+<Callout type="info">
+  Depending on the state of the template and the current application subscription plan, one or more operations may not not available.
+</Callout>
+
+### Edit 
+
+Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding. To edit a template, click on the desired template card from the [Email][Email](https://dashboard.clerk.com/last-active?path=customization/email) or [SMS][Email](https://dashboard.clerk.com/last-active?path=customization/sms) template listing page.
+
+To persist your changes, click on the **Apply Changes** button at the bottom right. Your changes will then take immediate effect for the corresponding application instance. 
+
+Templates are editable:
+
+- On the development instance of applications on any subscription plan (free or paid)
+- On the staging and production instances of paid plans
+
+This allows you freely test the templating feature on your development environment to see if it fits your individual use case before deciding on a plan upgrade.
+
+## Preview 
+
+The Preview operation enables you to get an idea of how the template will render when sent to the the recipient. This is useful for sampling your changes without actually having to commit them first.
+
+To trigger a preview, you can click on the **Preview** button at the bottom left of the screen. The example below shows a preview of the default **Invitation** email template.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/template-preview.jpg"
+alt="A preview of the default 'Invitation' email template. A red arrow points to the 'Preview' button."
+/>
+
+In email templates, the `app_logo` and `copyright` sections (if present) will be replaced with their actual markup in this view. For both emails & SMS, the template variables will be replaced with sample values.
+
+Previewing is available for all templates.
+
+### Reset 
+
+While editing a template, you can undo all changes since the last save by clicking on the **Reset** button at the bottom right of the edit page.
+
+Template reset is applicable to editable templates.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/reset-template.jpg"
+alt="The 'Invitation' email template customization page. A red arrow points to the 'Reset' button."
+/>
+
+### Revert
+
+Even if you override a Clerk-provided template with your own customizations, you can always roll back to the system default template version by clicking on the **Revert** button.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/revert-template.jpg"
+alt="The 'Invitation' email template customization page. A red arrow points to the 'Revert' button."
+/>
+
+This can be useful if you want to start over from scratch.
+
+<Callout type="info">
+  Your current changes will be lost, so please make sure you indeed wish to discard them prior to reverting. You will be asked to confirm your choice to prevent an unintentional action.
+</Callout>
+
