--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -162,3 +162,21 @@ This can be useful if you want to start over from scratch.
   Your current changes will be lost, so please make sure you indeed wish to discard them prior to reverting. You will be asked to confirm your choice to prevent an unintentional action.
 </Callout>
 
+### Copy to another instance of the same application
+
+If your application has more than one instance, then you will also have the option of copying the current state of the editor to another instance.
+
+This is especially useful for promoting changes from your development or staging environment to production, after you have tested them.
+
+To copy to another instance, you will need to first click on the **Copy to** button and then from the sub-menu select the target instance.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-sms-options/copy-button.jpg"
+alt="The 'Copy' button  template customization page. A red arrow points to the 'Revert' button."
+/>
+
+Since this change will override the current state of the template on the target instance, you will be asked to confirm your choice.
+
+Note that the copy icon will not appear if there are no other instances available on your application.
