code review updates

--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -5,7 +5,7 @@ description: Learn how to manage user access to your application by configuring 
 
 # Restrictions
 
-Clerk provides a set of restriction options designed to provide you with enhanced control over who can gain access to your application. Through these restriction settings, you can limit sign-ups or prevent accounts with specific identifiers from accessing your application.  These identifiers can be email addresses, phone numbers, and even entire domains. To get started, navigate to the [Restrictions](https://dashboard.clerk.com/last-active?path=user-authentication/restrictions) tab under the **User & Authentication** section of the [Clerk Dashboard](https://dashboard.clerk.com).
+Clerk provides a set of restriction options designed to provide you with enhanced control over who can gain access to your application. Through these restriction settings, you can limit sign-ups or prevent accounts with specific identifiers from accessing your application. These identifiers can be email addresses, phone numbers, and even entire domains. To get started, navigate to the [Restrictions](https://dashboard.clerk.com/last-active?path=user-authentication/restrictions) tab under the **User & Authentication** section of the [Clerk Dashboard](https://dashboard.clerk.com).
 
 ## Allowlist
 
@@ -31,6 +31,10 @@ alt="The 'Allowlist' section in the 'Restrictions' tab under the 'User & Authent
 After turning on the Allowlist feature, you can add individual email addresses and phone numbers, or whitelist entire email domains.
 
 For example, if you add "clerk.dev" as an allowed email domain, it means that anybody with a "@clerk.dev" email address can sign up for your application. Email addresses from different domains will not be able to sign up.
+
+<Callout type="warning" emoji="⚠️">
+  In the case you have enabled the Allowlist and the Blocklist and have added the same identifier in both, the Allowlist takes precedence.
+</Callout>
 
 ## Blocklist
 
@@ -62,6 +66,10 @@ For example, if you add "clerk.dev" as a blocked email domain, it means that any
 ### Block email subaddresses
 
 The Block email subaddresses feature allows you to control who can get access to your application. It can restrict email addresses that contain the characters `+`, `=` or `#` from signing up or being added to existing accounts.
+
+<Callout type="info">
+  Existing accounts with email subaddresses will not be affected by this restriction, and will still be allowed to sign in.
+</Callout>
 
 Enable this feature by navigating to the **Restrictions** section in the [Restrictions](https://dashboard.clerk.com/last-active?path=user-authentication/restrictions) tab under the **User & Authentication** section.
 
