USR-313 Update "Allowlist" docs to include documentation on all "Restrictions" (#235)

--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -1,13 +1,13 @@
 ---
 title: Sign-up options | Authentication
-description: Clerk provides various options for setting up a sign-up flow. 
+description: Clerk provides various options for setting up a sign-up flow.
 ---
 
 # Sign-up options
 
 Clerk provides various options for setting up a sign-up flow. These options are configurable from the [Clerk Dashboard](https://dashboard.clerk.com/). When a new application is created, you will be presented with the following screen:
 
-<Images 
+<Images
 width={1879}
 height={1373}
 src="/docs/images/setup-clerk/create-sign-in-comp.png"
@@ -38,7 +38,7 @@ There are two available authentication strategies to choose from: **password** o
 
 Choosing a **password** strategy requires users to set a password during the sign up process. Clerk offers out of the box protection against weak and leaked passwords and the only requirement enforced is that the password be a mimum of 8 characters. (**Note**: passwordless authentication is still available to users even if password strategy is selected. For more information on how to set up password-based authentication, check our [detailed guide](/docs/custom-flows/email-password).)
 
-Choosing a **passwordless** strategy involves a user signing up with an email address or phone number and then receiving a one-time verification code to complete the authentication process. While a one-time code is the default passwordless option, an email verification link (also known as a [magic link](/docs/custom-flows/magic-links)) is another passwordless authentication option that can later be enabled in settings. 
+Choosing a **passwordless** strategy involves a user signing up with an email address or phone number and then receiving a one-time verification code to complete the authentication process. While a one-time code is the default passwordless option, an email verification link (also known as a [magic link](/docs/custom-flows/magic-links)) is another passwordless authentication option that can later be enabled in settings.
 
 ## Choose social login providers
 
@@ -54,7 +54,7 @@ Clerk provides [Web3 authentication](/docs/users/web3-wallets) as an option with
 
 Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the [configuration screen](https://dashboard.clerk.com/last-active?path=/user-authentication/multi-factor) in the Clerk Dashboard. For more information on how to set up multifactor authentication, check out our [detailed guide](/docs/custom-flows/mfa#overview).
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/custom-flows/multifactor.jpg"
@@ -63,15 +63,4 @@ alt="The 'Multi-factor authentication' tab under the 'User & Authentication' sec
 
 ## Set sign-up restrictions
 
-The allowlist feature allows you to control who can get access to your application. It can restrict sign ups to only a certain set of email addresses or phone numbers that you define. Enable this feature by navigating to the [Sign-up restrictions](https://dashboard.clerk.com/last-active?path=/user-authentication/signup-restrictionsq) screen in the Clerk Dashboard.
-
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/restrictions.jpg"
-alt="The 'Restrictions' tab under the 'User & Authentication' section of the Clerk Dashboard."
-/>
-
-After turning on the allowlist feature, you can add individual email addresses and phone numbers, or whitelist entire email domains.
-
-For example, if you add "clerk.dev" as an allowed email domain, it means that anybody with a "@clerk.dev" email address can sign up for your application. Email addresses from different domains will not be able to sign up.
+Clerk provides a set of restriction options designed to provide you with enhanced control over who can gain access to your application. Through these restriction settings, you can limit sign-ups or prevent accounts with specific identifiers from accessing your application.  These identifiers can be email addresses, phone numbers, and even entire domains. Learn more about restrictions in our [detailed guide](/docs/authentication/configuration/restrictions).
