--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -362,7 +362,7 @@ const styles = StyleSheet.create({
 
 If you want to add OAuth login flows to your Expo application, Clerk's OAuth hook allows you to handle both sign in and sign up in a single flow.
 
-```tsx filename="hookes/warmUpBrowser.tsx"" copy
+```tsx filename="hooks/warmUpBrowser.tsx"" copy
 import React from "react";
 import * as WebBrowser from "expo-web-browser";
 
