--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -418,7 +418,7 @@ export default SignInWithOAuth;
 ```
 
 <Callout type="info">
-  Now would be good a time to test your OAuth flow. Restart your server to remove the session.
+  Now would be a good time to test your OAuth flow. Restart your server to remove the session.
 </Callout>
 
 Make sure you update your `app` file to use the component that you have created. Replace the `<SignInScreen />` with the `<SignInWithOAuth />` to the `<SignedOut />` component.
