--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -49,7 +49,7 @@ export default async function Page() {
   const { orgRole } = auth();
   return (
     <>
-      <div>Your curren role is {orgRole}</div>
+      <div>Your current role is {orgRole}</div>
     </>
   )
 }
