--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -3,9 +3,6 @@ title: Setup Clerk
 description: Set up a new Clerk account and integrate it into a new application.
 ---
 
-import {FrameworkCards} from "@/components/FrameworkCards";
-import { Steps } from 'nextra-theme-docs'
-
 # Setup Clerk
 
 Set up a new Clerk account and integrate it into a new application.
@@ -62,7 +59,7 @@ Creating a Clerk account and using it in your apps can be done in three steps:
 
       <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/docs/quickstarts/nextjs" cta="Get Started" icon="/docs/images/logos/nextjs.svg" iconWidth="40" />
 
-      <FrameworkCards title="JavaScript" description="Add authentication and user management to your JavaScript application." link="/docs/quickstarts/javascript" cta="Get started" hideArrow={true} icon="/docs/images/logos/javascript.svg" iconWidth="30" />
+      <FrameworkCards title="JavaScript" description="Add authentication and user management to your JavaScript application." link="/docs/quickstarts/javascript" cta="Get Started" hideArrow={true} icon="/docs/images/logos/javascript.svg" iconWidth="30" />
 
       <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/docs/quickstarts/remix" cta="Get Started" icon="/docs/images/logos/remix.svg" />
 
