fix: Brand names casing

--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -98,7 +98,7 @@ Below is an example of a webhook payload for a `user.created` event:
 }
 ```
 
-## Typescript Support
+## TypeScript Support
 
 Clerk provides the types as part of our SDK offering. Below is an example of type usage in a webhook handler:
 
