--- a/docs/references/javascript/types/oauth-strategy.mdx
+++ b/docs/references/javascript/types/oauth-strategy.mdx
@@ -33,7 +33,7 @@ type OAuthStrategy = |
     ]}, {cells: [
         <code>oauth_github</code>,
         <code>string</code>,
-        <>Specify Github as the verification OAuth provider.</>
+        <>Specify GitHub as the verification OAuth provider.</>
     ]}, {cells: [
         <code>oauth_google</code>,
         <code>string</code>,
