--- a/docs/security/xss-leak-protection.mdx
+++ b/docs/security/xss-leak-protection.mdx
@@ -16,14 +16,14 @@ Clerk works to minimize the surface area by using HttpOnly cookies for authentic
 ## What is a HttpOnly cookie?
 HttpOnly is a flag on the [Set-Cookie](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie) header that is issued by a server to set a cookie in the browser.
 
-When this flag is set, the cookie can only be read from a server responding to an HTTP request. It is not accessible through Javascript with the document.cookie property.
+When this flag is set, the cookie can only be read from a server responding to an HTTP request. It is not accessible through JavaScript with the document.cookie property.
 
-Without the flag, a cookie can also be read by Javascript in the browser.
+Without the flag, a cookie can also be read by JavaScript in the browser.
 
 ## How do HttpOnly cookies minimize XSS attacks?
-XSS attacks allow the attacker to run arbitrary Javascript in the browser while users are navigating your application.
+XSS attacks allow the attacker to run arbitrary JavaScript in the browser while users are navigating your application.
 
-If Clerk did not use an HttpOnly cookie, but instead used a storage solution that is accessible through Javascript, it would mean the malicious Javascript could access users' session tokens.
+If Clerk did not use an HttpOnly cookie, but instead used a storage solution that is accessible through JavaScript, it would mean the malicious JavaScript could access users' session tokens.
 
 Unauthorized access to session tokens is especially problematic because the tokens can be used to take actions on behalf of a user, even after a XSS vulnerability has been resolved. As a result, when session tokens leak, it is recommended you invalidate existing tokens and force users to sign in again.
 
