--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -362,7 +362,7 @@ const styles = StyleSheet.create({
 
 If you want to add OAuth login flows to your Expo application, Clerk's OAuth hook allows you to handle both sign in and sign up in a single flow.
 
-```tsx filename="hookes/warmUpBrowser.tsx"" copy
+```tsx filename="hooks/warmUpBrowser.tsx"" copy
 import React from "react";
 import * as WebBrowser from "expo-web-browser";
 
@@ -418,7 +418,7 @@ export default SignInWithOAuth;
 ```
 
 <Callout type="info">
-  Now would be good a time to test your OAuth flow. Restart your server to remove the session.
+  Now would be a good time to test your OAuth flow. Restart your server to remove the session.
 </Callout>
 
 Make sure you update your `app` file to use the component that you have created. Replace the `<SignInScreen />` with the `<SignInWithOAuth />` to the `<SignedOut />` component.
