add community section to main nav; add page for community SDK's

--- a/docs/references/community.mdx
+++ b/docs/references/community.mdx
@@ -9,6 +9,26 @@ Explore SDK's created by the Clerk community.
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards url="https://vue-clerk.vercel.app/" externalUrl="true" title="Vue" description="Add secure, beautiful, and fast authentication and user management to Vue with clerk." ctaText="Learn more" />
+    <Cards 
+      title="Vue" 
+      description="Add secure, beautiful, and fast authentication and user management to Vue with Clerk."
+      link="https://vue-clerk.vercel.app/"
+      externalUrl="true" 
+      cta="Learn more"
+    />
+    <Cards 
+      title="Rust" 
+      description="Take your Rust application to the next level by integrating Clerk's authentication and user management capabilities."
+      link="https://github.com/cincinnati-ventures/clerk-rs"
+      externalUrl="true" 
+      cta="Learn more"
+    />
+    <Cards 
+      title="Elysia" 
+      description="Enhance your Elysia.js application with Clerk's authentication and user management."
+      link="https://github.com/wobsoriano/elysia-clerk"
+      externalUrl="true" 
+      cta="Learn more"
+    />
   </div>
 </div>
