fix: Missing alt on Apple

--- a/docs/authentication/social-connections/apple.mdx
+++ b/docs/authentication/social-connections/apple.mdx
@@ -3,6 +3,8 @@ title: Apple
 description: Learn how to set up social connection with Apple.
 ---
 
+import { Images } from "@/components/Images";
+
 # Apple
 
 How to set up social connection with Apple
@@ -34,7 +36,12 @@ Also, you'll need to retrieve (2) configuration values from Clerk Dashboard and 
 
 First, sign in to the Apple Developer portal and from the sidebar, click on **Certificates, Identifiers and Profiles.**
 
-![](/docs/images/authentication-providers/apple/db4e5a4cfaff7f2f29ba0f49797bf0ee481e7c56-1587x576.png)
+<Images
+  width={1587}
+  height={576}
+  src="/docs/images/navigating-to-certificates-identifiers-profiles.jpg"
+  alt="Navigating to Certificates, Identifiers and Profiles"
+/>
 
 ### Retrieving the Apple Team ID
 
@@ -42,19 +49,39 @@ The first thing you have to do is create an **App ID**. You can think of it like
 
 From the sidebar on the left, click on **Identifiers** and make sure that from the dropdown at the top-right corner, the **App IDs** option is selected. Then, click on the blue plus icon.
 
-![](/docs/images/authentication-providers/apple/fcec727bd0da2145d247c55347ed37f4a6857d43-1245x370.png)
+<Images
+  width={1216}
+  height={438}
+  src="/docs/images/creating-a-new-email-source.jpg"
+  alt="Creating a new identifier"
+/>
 
 You'll be taken to a **Register a new identifier** page with several choices. Select the **App IDs** option and click **Continue.**
 
-![](/docs/images/authentication-providers/apple/ef270f000a56432e6206e6e27da8a0a3fe63e4c6-1219x591.png)
+<Images
+  width={1219}
+  height={591}
+  src="/docs/images/selecting-app-ids.jpg"
+  alt="Selecting App IDs"
+/>
 
 On the next page, you'll be prompted to select a **type** for your application. Choose **App** and click **Continue.**
 
-![](/docs/images/authentication-providers/apple/a2e4646c58e07e18c390542f24c16a343fca8a71-1242x405.png)
+<Images
+  width={1242}
+  height={405}
+  src="/docs/images/selecting-app.jpg"
+  alt="Selecting App"
+/>
 
 In the next screen, you'll have to fill in a description for your App ID and a Bundle ID. None of these matter for the purposes of this guide, but it's good to pick something descriptive.
 
-![](/docs/images/authentication-providers/apple/d9228d13727c39cd3f1230b33e02dfdf0291f06d-1181x616.png)
+<Images
+  width={1181}
+  height={616}
+  src="/docs/images/adding-description-1.jpg"
+  alt="Adding description"
+/>
 
 Also, from the list of Capabilities displayed right below, make sure that **Sign In with Apple** is checked. Then click **Continue** and in the confirmation screen.
 
@@ -62,7 +89,12 @@ From the confirmation screen, write down the value displayed in the **App ID Pre
 
 Finally, click **Register** to complete the creation of your App ID.
 
-![](/docs/images/authentication-providers/apple/3678df915c1d0bed6b5a13d88b0815bf766ac24f-1253x715.png)
+<Images
+  width={1253}
+  height={715}
+  src="/docs/images/completing-the-creation-of-app-id.jpg"
+  alt="Completing the creation of App ID"
+/>
 
 ### Retrieving the Apple Services ID
 
@@ -72,25 +104,51 @@ Navigate back to the **Certificates, Identifiers & Profiles** screen and from th
 
 On the next screen, select **Services ID** from the dropdown at the top-right corner and click on the blue plus icon to create a new Services ID.
 
-![](/docs/images/authentication-providers/apple/dabc0c7f9dd6edd7cc0f6422a1673d872883ddb7-1920x927.png)
+<Images
+  width={1920}
+  height={927}
+  src="/docs/images/creating-a-new-identifier.jpg"
+  alt="Creating a new identifier"
+/>
 
 You'll be taken to the same **Register new identifier** screen as in the previous section. This time, you'll choose **Services IDs** from the various options presented and then click **Continue**.
 
-![](/docs/images/authentication-providers/apple/8038541f99de19555466f1cd87aec52bf4aec149-1198x480.png)
+<Images
+  width={1198}
+  height={480}
+  src="/docs/images/selecting-services-ids.jpg"
+  alt="Selecting Services IDs"
+/>
+
 
 In the next screen, fill in a description and an **Identifier**. This identifier is important, since it is your **Services ID** value you'll need later on to configure your instance, so make sure to note it down.
 
-![](/docs/images/authentication-providers/apple/63417f8cd53dacb530ca5508765df5d1fecade9c-1198x363.png)
+<Images
+  width={1198}
+  height={363}
+  src="/docs/images/adding-description-2.jpg"
+  alt="Adding description"
+/>
 
 After the registration is finished, go back to configure the newly-created Services ID. Make sure the **Sign In with Apple** box is enabled and click **Configure**.
 
-![](/docs/images/authentication-providers/apple/b456dab662e7e6cc66be45818447e74a27265e97-1188x428.png)
+<Images
+  width={1188}
+  height={428}
+  src="/docs/images/navigating-to-the-configuration-page.jpg"
+  alt="Navigating to the configuration page"
+/>
 
 This configuration screen is where you tell Apple what domain and redirect URIs your application will use. Choose the App ID you created before, and in the domain enter `clerk.<your-domain>`.
 
 Next, go to Clerk's [Dashboard](https://dashboard.clerk.dev/), select your application and instance and go to **Authentication -> Social Connections**. Click the gear icon next to the Apple provider and copy the **Authorized redirect URI** value. Paste the value into the **Return URLs** in Apple Developer Portal and click **Next**.
 
-![](/docs/images/authentication-providers/apple/48549b1a0c948a88c0877b730fd689025b9dfc86-704x801.png)
+<Images
+  width={704}
+  height={801}
+  src="/docs/images/adding-the-values-from-clerk-into-configuration.jpg"
+  alt="Adding the values from the Clerk dashboard into the configuration"
+/>
 
 ### Retrieving the Apple Key ID and private key
 
@@ -104,21 +162,41 @@ Once again, navigate to the **Certificates, Identifiers & Profiles** page and ch
 
 Fill in a descriptive name (it doesn't matter much) and make sure you've ticked the **Sign In with Apple** checkbox from the list below. Then, click the corresponding **Configure** on the right column.
 
-![](/docs/images/authentication-providers/apple/59c696827239217c7175040321e6a15a2babc625-1226x771.png)
+<Images
+  width={1226}
+  height={771}
+  src="/docs/images/registering-a-new-key.jpg"
+  alt="Registering a new key"
+/>
 
 You'll be taken to a page where you'll have to associate the key you're about to create, with an **App ID**.
 
 From the **Primary App ID** dropdown, select the App ID you created in the first step of this guide and click **Save**.
 
-![](/docs/images/authentication-providers/apple/7dd274cdcd32f999f6686d7e4ec9665c925096c4-1211x519.png)
+<Images
+  width={1211}
+  height={519}
+  src="/docs/images/associating-an-app-id-to-the-newly-created-key.jpg"
+  alt="Associating an App ID to the newly created key"
+/>
 
 You'll be taken back to the previous **Register a New Key** page. Click **Continue** and you'll be presented with the final confirmation screen. Verify that **Sign in with Apple** is checked and click **Register**.
 
-![](/docs/images/authentication-providers/apple/6543e4fb4583a490d7bc635617134667a460a96c-1202x542.png)
+<Images
+  width={1202}
+  height={542}
+  src="/docs/images/finalizing-the-creation-of-the-newly-created-key.jpg"
+  alt="Finalizing the creation of the newly created key"
+/>
 
 You'll be taken to a page titled **Download Your Key**. From here, you want to note down the displayed **Key ID**. You will also download the private key as a file (as the instructions point out, be sure to backup the key in a secure place). Click on **Download** to retrieve the private key.
 
-![](/docs/images/authentication-providers/apple/0f21f1aa963ba8435cdd85154597ef2206fbbf4e-1209x494.png)
+<Images
+  width={1209}
+  height={494}
+  src="/docs/images/downloading-the-newly-created-key.jpg"
+  alt="Downloading the newly created key"
+/>
 
 With the Key ID and your private key at hand, you have everything you need to configure Apple SSO in your Clerk Dashboard. Click **Done**.
 
@@ -134,23 +212,48 @@ First, navigate to Clerk Dashboard, to your _production_ instance's **Social Con
 
 > This setting is only available after you have deployed your instance.
 
-![](/docs/images/authentication-providers/apple/e943aa10dc72d9112e5b7d07b31b4d97749e6939-564x1149.png)
+<Images
+  width={564}
+  height={1149}
+  src="/docs/images/finding-email-source-on-clerk.jpg"
+  alt="Finding the Email Source for Apple Private Email Relay value on the Clerk dashboard"
+/>
 
 The value of the setting is essentially an email address; copy it, go to your Apple Developer portal, and go to the **Certificates, Identifiers & Profiles** page. Click on **More** from the sidebar on the left and then **Configure**.
 
-![](/docs/images/authentication-providers/apple/aa543d8d1692b63c29cc4c148f2099573ed6cfe5-1249x379.png)
+<Images
+  width={1249}
+  height={379}
+  src="/docs/images/accessing-configuration-certificates-identifiers-profiles.jpg"
+  alt="Accessing the configuration page for Certificates, Identifiers & Profiles"
+/>
 
 On the next screen, click on the blue plus icon to add a new **Email Source**.
 
-![](/docs/images/authentication-providers/apple/4871c32f7a94aec96d17de0d4c40bd322d57b3df-1216x438.png)
+<Images
+  width={1216}
+  height={438}
+  src="/docs/images/creating-a-new-email-source.jpg"
+  alt="Creating a new Email Source"
+/>
 
 Paste the value you copied from the Clerk Dashboard to the **Email Addresses** field and click **Next.** Then click **Register** to confirm the changes.
 
-![](/docs/images/authentication-providers/apple/8ee971c3abbb1256759ecfe1cb5e775ef3d18cef-593x808.png)
+<Images
+  width={593}
+  height={808}
+  src="/docs/images/adding-value-from-clerk-into-email-addresses.jpg"
+  alt="Adding the value from the Clerk dashboard into the email addresses list"
+/>
 
 After this, you should now see the email address added to the list, and it should be marked as verified with a green check icon.
 
-![](/docs/images/authentication-providers/apple/a26fadc92c4d2206914f38d12d2802fdf4c02b26-1204x447.png)
+<Images
+  width={1204}
+  height={447}
+  src="/docs/images/certificates-identifiers-profiles-verified-email-source.jpg"
+  alt="Certificates, Identifiers & Profiles showing the verified email source"
+/>
 
 If it does not appear as Verified yet, don't worry, DNS propagation may take some time to complete. Wait a few minutes (it could even be hours) and click on **Reverify SPF** button from that list.
 
@@ -174,7 +277,12 @@ In the modal, you'll see all the corresponding fields that you should paste the 
 
 After filling in the settings, you'll end up with something roughly like this:
 
-![](/docs/images/authentication-providers/apple/0f79ae6da1720bf762f303eb251022d2633b665c-592x1297.png)
+<Images
+  width={592}
+  height={1297}
+  src="/docs/images/adding-values-into-clerk.jpg"
+  alt="Adding the values into the Clerk dashboard"
+/>
 
 Click **Save** and you should be good to go. Congratulations! Social connection with Apple is now configured for your instance.
 
