add step about V2_ClerkErrorBoundary

--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -3,13 +3,6 @@ title: Use Clerk with Remix
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application.
 ---
 
-import { Callout } from "nextra-theme-docs";
-import {Steps} from "nextra-theme-docs";
-import { YouTube } from "@/components/Youtube";
-import { Images } from "@/components/Images";
-import {Cards} from "@/components/Cards";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Use Clerk with Remix
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application.
@@ -106,7 +99,7 @@ export const loader: LoaderFunction = args => {
 // Additonal application code
 ```
 
-### Configure ClerkApp
+### Configure `ClerkApp`
 
 Clerk provides a `ClerkApp` wrapper to provide the authentication state to your React tree. This helper works with Remix SSR out-of-the-box and follows the "higher-order component" paradigm.
 
@@ -155,9 +148,9 @@ function App() {
 export default ClerkApp(App);
 ```
 
-### Set `ClerkCatchBoundary`
+### Set root `ErrorBoundary`
 
-Clerk uses short lived tokens to keep your application secure. To refresh expired tokens, Clerk uses Remix's catch boundary.
+Clerk uses short lived tokens to keep your application secure. To refresh expired tokens, Clerk uses Remix's error boundary.
 
 <Callout type="info">
   If you are seeing a 401 after a short period of time, even though your user is logged in, please verify you have implemented this section.
@@ -176,7 +169,7 @@ import {
 } from "@remix-run/react";
 
 import { rootAuthLoader } from "@clerk/remix/ssr.server";
-import { ClerkApp, ClerkCatchBoundary } from "@clerk/remix";
+import { ClerkApp, V2_ClerkErrorBoundary } from "@clerk/remix";
 
 export const meta: MetaFunction = () => ({
   charset: "utf-8",
@@ -185,8 +178,8 @@ export const meta: MetaFunction = () => ({
 });
 
 export const loader: LoaderFunction = (args) => rootAuthLoader(args);
-// add a Catch Boundary
-export const CatchBoundary = ClerkCatchBoundary();
+// add n Error Boundary
+export const ErrorBoundary = V2_ClerkErrorBoundary();
 
 function App() {
   return (
@@ -208,17 +201,25 @@ function App() {
 export default ClerkApp(App);
 ```
 
-If you need to add a custom boundary to your application, you can pass it as an argument to the `ClerkCatchBoundary`.
+If you need to add a custom boundary to your application, you can pass it as an argument to the `V2_ClerkErrorBoundary`.
 
 ```tsx filename="app/root.tsx" copy
 // Imports
 
-export const CatchBoundary = ClerkCatchBoundary(YourBoundary);
+export const ErrorBoundary = V2_ClerkErrorBoundary(YourBoundary);
 
 // Additional application code
 ```
 
-Clerk offers a set of prebuilt components that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This example uses the `<SignIn/>` and `<SignUp />` components by utlizing Remix routes.
+If you have not set the `v2_errorBoundary` future flag to `true`, use the `ClerkCatchBoundary` instead. 
+
+In your `root.tsx` file, use the following instead of `V2_ClerkErrorBoundary`:
+
+```ts
+export const CatchBoundary = ClerkCatchBoundary();
+```
+
+Clerk offers a set of prebuilt components that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This example uses the `<SignIn/>` and `<SignUp />` components by utilizing Remix routes.
 
 The functionality of the components are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev).
 
