--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -178,7 +178,7 @@ export const meta: MetaFunction = () => ({
 });
 
 export const loader: LoaderFunction = (args) => rootAuthLoader(args);
-// add n Error Boundary
+// add an Error Boundary
 export const ErrorBoundary = V2_ClerkErrorBoundary();
 
 function App() {
