organize Error Boundary section better

--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -201,21 +201,24 @@ function App() {
 export default ClerkApp(App);
 ```
 
+#### Custom Boundary
+
 If you need to add a custom boundary to your application, you can pass it as an argument to the `V2_ClerkErrorBoundary`.
 
 ```tsx filename="app/root.tsx" copy
 // Imports
 
+// YourBoundary is passed as an argument to V2_ClerkErrorBoundary
 export const ErrorBoundary = V2_ClerkErrorBoundary(YourBoundary);
 
 // Additional application code
 ```
 
+#### Catch Boundary
+
 If you have not set the `v2_errorBoundary` future flag to `true`, use the `ClerkCatchBoundary` instead. 
 
-In your `root.tsx` file, use the following instead of `V2_ClerkErrorBoundary`:
-
-```ts
+```ts filename="app/root.tsx" copy
 export const CatchBoundary = ClerkCatchBoundary();
 ```
 
